syntax = "proto3";

package fourier_service;

// Service for Fourier Neural Network predictions
service FourierPredictionService {
  rpc Predict (PredictionRequest) returns (PredictionResponse);
}

// Message defining the input structure for predictions
message PredictionRequest {
  string input_data = 1; // Input data for Fourier Neural Network
}

// Message defining the structure of the prediction response
message PredictionResponse {
  string result = 1;       // Prediction result
  string details = 2;      // Additional details
}
